--- a/Contact.html
+++ b/Contact.html
@@ -17,5 +17,25 @@
             </div>
         </nav>
     </header>
+    <main>
+    <h1>Contact Me</h1>
+    <form action="mailto:carlosjamerson95@gmail.com" method="get" enctype="text/plain">
+        <div>
+          <label for="name">Name: </label>
+          <input type="text" name="name" id="name" required/>
+        </div>
+        <div>
+          <label for="email">Email: </label>
+          <input type="email" name="email" id="email" required/>
+        </div>
+        <div>
+            <label for="message">Message: </label>
+            <textarea name="message" name="message"></textarea>
+        </div>
+        <div>
+          <input type="submit" value="Submit"/>
+        </div>
+      </form>
+    </main>
 </body>
 </html>
