--- a/About.html
+++ b/About.html
@@ -22,10 +22,10 @@
     <p>Hello! My name is Carlos Jamerson Jr., or as anyone following my creative works or online presence would know me as, True Discord. I am a writer, artist, and musician who has been creating content for over a decade. I have a passion for storytelling and advocating for various forms or social justice.</p>
     <p>True Discord has been a name I have used for many years, and it has gone through many changes. It started as a pen name for myself back in 2012, and now it is the name I use for my online presence. I have always been drawn to the idea of chaos and harmony coexisting and being able to fuel one-another, and the name Discord has always been a reflection of that.</p>
     <h2>The Many Incarnations of Discord</h2>    
-    <img src="VRChat_2024-10-13_22-17-13.753_7680x4320.png" alt="VR CJ">
-    <img src="Mike.jpg" alt="Mike Dirigo">
-    <img src="Mack.jpg" alt="Mackenzie Brooks">
-    <img src="CJ.jpg" alt="Comic CJ">
+    <img src="VRChat_2024-10-13_22-17-13.753_7680x4320.png" alt="VR CJ" height="50" width="50">
+    <img src="Mike.jpg" alt="Mike Dirigo" height="50" width="50">
+    <img src="Mack.jpg" alt="Mackenzie Brooks" height="50" width="50">
+    <img src="CJ.jpg" alt="Comic CJ" height="50" width="50">
 </main>
 </body>
 </html>
