--- a/Home.html
+++ b/Home.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where the Heart Is</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome Home</h1>
-    <p>Find a room and relax for a while</p>
-    
+    <header>
+        <nav>
+            <div>
+                <a href="Home.html">Home</a>
+                <a href="About.html">About</a>
+                <a href="Blog.html">Blog</a>
+                <a href="Q&A.html">Q&A</a>
+                <a href="Contact.html">Contact</a>
+                <a href="Slayers.html">Slayers</a>
+                <a href="STAR.html">S.T.A.R.</a>
+            </div>
+        </nav>
+    </header>
+<h1>Welcome To The Den of Discord</h1>
+<img src="Chaos.png" alt="Chaos" height="300" width="300" class="center">
+<p>Choose a door and stay a while.</p>
+<nav>
+    <div>
+        <a href="Home.html">Home</a>
+        <a href="About.html">About</a>
+        <a href="Blog.html">Blog</a>
+        <a href="Q&A.html">Q&A</a>
+        <a href="Contact.html">Contact</a>
+        <a href="Slayers.html">Slayers</a>
+        <a href="STAR.html">S.T.A.R.</a>
+    </div>
+</nav>
 </body>
 </html>
