--- a/About.html
+++ b/About.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,20 +13,24 @@
                 <a href="Home.html">Home</a>
                 <a href="About.html">About</a>
                 <a href="Blog.html">Blog</a>
-                <a href="FAQ.html">FAQ</a>
+                <a href="Q&A.html">Q&A</a>
                 <a href="Contact.html">Contact</a>
+                <a href="Slayers.html">Slayers</a>
+                <a href="STAR.html">S.T.A.R</a>
             </div>
         </nav>
     </header>
 <main>
     <h1>About True Discord</h1>
-    <p>Hello! My name is Carlos Jamerson Jr., or as anyone following my creative works or online presence would know me as, True Discord. I am a writer, artist, and musician who has been creating content for over a decade. I have a passion for storytelling and advocating for various forms or social justice.</p>
-    <p>True Discord has been a name I have used for many years, and it has gone through many changes. It started as a pen name for myself back in 2012, and now it is the name I use for my online presence. I have always been drawn to the idea of chaos and harmony coexisting and being able to fuel one-another, and the name Discord has always been a reflection of that.</p>
-    <h2>The Many Incarnations of Discord</h2>    
-    <img src="VRChat_2024-10-13_22-17-13.753_7680x4320.png" alt="VR CJ" height="50" width="50">
-    <img src="Mike.jpg" alt="Mike Dirigo" height="50" width="50">
-    <img src="Mack.jpg" alt="Mackenzie Brooks" height="50" width="50">
-    <img src="CJ.jpg" alt="Comic CJ" height="50" width="50">
+    <p style="color: gold;">Yo, My name is Carlos Jamerson Jr., or as anyone following my creative works or online presence would know me as, True Discord. I am a writer, artist, and musician who strives to make the world a better place through creative awareness. I have a passion for storytelling and advocating for various forms of social justice.</p>
+    <p style="color: gold;">True Discord has been a name I have used for many years, and it has gone through many changes. It started as a pen name for myself back in 2012, and now it is the name I use for my online presence. I have always been drawn to the idea of chaos and harmony coexisting and being able to fuel one-another, and the name Discord has always been a reflection of that.</p>
+    <h2>The Many Incarnations of Discord</h2>   
+    <img src="CJ.jpg" alt="Comic CJ" height="300" width="300">
+    <p style="color: gold;">An old rendition of the main character from <a href="STAR.html">S.T.A.R.</a> (a comic I'm working on)</p>
+    <img src="Mike.jpg" alt="Mike Dirigo" height="300" width="300">
+    <p style="color: gold;">A headshot of my first and primary fursona</p>
+    <img src="Mack.jpg" alt="Mackenzie Brooks" height="300" width="300">
+    <p style="color: gold;">The original art of my secondary fursona</p>
 </main>
 </body>
 </html>
