--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yo, What's Up?</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,8 +13,10 @@
                 <a href="Home.html">Home</a>
                 <a href="About.html">About</a>
                 <a href="Blog.html">Blog</a>
-                <a href="FAQ.html">FAQ</a>
+                <a href="Q&A.html">Q&A</a>
                 <a href="Contact.html">Contact</a>
+                <a href="Slayers.html">Slayers</a>
+                <a href="STAR.html">S.T.A.R.</a>
             </div>
         </nav>
     </header>
