--- a/About.html
+++ b/About.html
@@ -22,15 +22,15 @@
     </header>
 <main>
     <h1>About True Discord</h1>
-    <p style="color: gold;">Yo, My name is Carlos Jamerson Jr., or as anyone following my creative works or online presence would know me as, True Discord. I am a writer, artist, and musician who strives to make the world a better place through creative awareness. I have a passion for storytelling and advocating for various forms of social justice.</p>
-    <p style="color: gold;">True Discord has been a name I have used for many years, and it has gone through many changes. It started as a pen name for myself back in 2012, and now it is the name I use for my online presence. I have always been drawn to the idea of chaos and harmony coexisting and being able to fuel one-another, and the name Discord has always been a reflection of that.</p>
+    <p>Yo, My name is Carlos Jamerson Jr., or as anyone following my creative works or online presence would know me as, True Discord. I am a writer, artist, and musician who strives to make the world a better place through creative awareness. I have a passion for storytelling and advocating for various forms of social justice.</p>
+    <p>True Discord has been a name I have used for many years, and it has gone through many changes. It started as a pen name for myself back in 2012, and now it is the name I use for my online presence. I have always been drawn to the idea of chaos and harmony coexisting and being able to fuel one-another, and the name Discord has always been a reflection of that.</p>
     <h2>The Many Incarnations of Discord</h2>   
     <img src="CJ.jpg" alt="Comic CJ" height="300" width="300">
-    <p style="color: gold;">An old rendition of the main character from <a href="STAR.html">S.T.A.R.</a> (a comic I'm working on)</p>
+    <p>An old rendition of the main character from <a href="STAR.html">S.T.A.R.</a> (a comic I'm working on)</p>
     <img src="Mike.jpg" alt="Mike Dirigo" height="300" width="300">
-    <p style="color: gold;">A headshot of my first and primary fursona</p>
+    <p>A headshot of my first and primary fursona, Mike Dirigo.</p>
     <img src="Mack.jpg" alt="Mackenzie Brooks" height="300" width="300">
-    <p style="color: gold;">The original art of my secondary fursona</p>
+    <p>The original art of my secondary fursona, Mackenzie Brooks.</p>
 </main>
 </body>
 </html>
