--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
                 <a href="Blog.html">Blog</a>
                 <a href="Q&A.html">Q&A</a>
                 <a href="Contact.html">Contact</a>
-                <a href="Slayers.html">Slayers</a>
+                <a href="LoG.html">Slayers</a>
                 <a href="STAR.html">S.T.A.R</a>
             </div>
         </nav>
