--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where the Heart Is</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -22,8 +21,8 @@
         </nav>
     </header>
 <h1>Welcome To The Den of Discord</h1>
-<img src="Chaos.png" alt="Chaos" height="300" width="300" class="center">
-<p>Choose a door and stay a while.</p>
+<div id="top" style="left: 500px; top: 200px; position: static;"><img src="./Images/Chaos.png" alt="Chaos" height="300" width="300" class="center"></div>
+<h2>Choose a door and stay a while.</h2>
 <nav>
     <div>
         <a href="Home.html">Home</a>
@@ -31,7 +30,7 @@
         <a href="Blog.html">Blog</a>
         <a href="Q&A.html">Q&A</a>
         <a href="Contact.html">Contact</a>
-        <a href="Slayers.html">Slayers</a>
+        <a href="LoG.html">Slayers</a>
         <a href="STAR.html">S.T.A.R.</a>
     </div>
 </nav>
